Fix scrollbar flashing

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -15,6 +15,7 @@ html, body {
   padding: 0;
 
   text-rendering: optimizeLegibility;
+  overflow: hidden;
 }
 
 body {
@@ -31,6 +32,7 @@ body {
   width: 100%;
   height: 100%;
   position: relative;
+  overflow: hidden;
 }
 
 .info {
